--- a/S3.md
+++ b/S3.md
@@ -17,3 +17,23 @@ Key (name of the object)
 Value (data inside the file)
 Version ID (versioning)
 Metadata (data about what you're storing (date of upload, tags, etc))
+Subresources - Access control lists, Torrents
+
+### Other S3
+
+SLA is 99.9% availability, durability is 99.99999999999% guaranteed to be kept
+known as the 11 9's durability. Built to continue operation even if two facilities drop concurrently.
+
+S3-IA (instant access) - not used often but when requested will be instantly available.
+
+S3-One Zone IA - same as above, but stored only in one Availability Zone
+
+S3-Glacier - Archival only, Expedidited, Standard, Bulk and lowest cost possible.
+
+Tiered Storage
+
+Lifecycle management (if file 30 days old, move it into archives)
+
+Encryption
+
+Secure data with access control lists and bucket policies
