--- a/S3.md
+++ b/S3.md
@@ -24,6 +24,8 @@ Subresources - Access control lists, Torrents
 SLA is 99.9% availability, durability is 99.99999999999% guaranteed to be kept
 known as the 11 9's durability. Built to continue operation even if two facilities drop concurrently.
 
+S3 standard has no retrieval fee but all other plans have a fee.
+
 S3-IA (instant access) - not used often but when requested will be instantly available.
 
 S3-One Zone IA - same as above, but stored only in one Availability Zone
@@ -37,3 +39,27 @@ Lifecycle management (if file 30 days old, move it into archives)
 Encryption
 
 Secure data with access control lists and bucket policies
+
+### Charged for
+
+Storage,
+Requests,
+Storage Management Pricing
+Data Transfer Pricing
+Transfer Acceleration - fast, easy, secure transfers over long locations. (CDN - edge locations)
+
+### Review
+
+S3 is object based for files only (between 0 and 5tb in size)
+Objects have key value pairs, meta data, versions, etc
+Unlimited storage, stored in buckets
+Universal name space, have to be unique
+https://s3-eu-west-1.amazonaws.com/leslie
+read after write consistency (new object shows instantly)
+eventual consistency for overwrite and deletes (can take some time to update)
+
+storage class and tiers
+S3 (frequent access, durable, immediate)
+S3-IA (durable, immediate infrequent access)
+S3 One Zone (same as above but one AZ)
+Glacier - Archived data, free retrieval but slow
