--- a/EC2-101.md
+++ b/EC2-101.md
@@ -12,3 +12,74 @@ Helps devs create failure resilient applications and isolate themselves from com
 - Reserved: capacity reservation and significant discount. 1 or 3 year terms.
 - Spot: bid a price and greater savings depending on the spot price. Flexible start and end times. Similar to stock market bidding.
 - Dedicated Hosts: Physical EC2 server dedicated for your use. Dedicated Hosts can help you reduce costs by allowing you to use your existing server-bound software licenses.
+
+## On demand
+
+- low cost and flexibility without any up front payment or long-term commitment.
+- apps with short term, spiky or unpredictable workloads that cannot be interrupted
+- applications being developed or tested on EC2 for the first time
+
+## Reserved instances
+
+- steady state or predictable usage
+- apps that require reserved capacity
+- up front payments and reduced costs. Can be up to 75% off the on-demand price.
+- Can change reservations from cpu to memory intensive etc
+- Can match your capacity to schedule for month end peaks etc
+
+## Spot instances
+
+- flexible start and end times
+- apps that are only feasible at very low compute prices (can do heaps sunday evening with low bid instead of during peak time)
+- urgent need for a large amount of computing capacity
+
+## Dedicated Hosts
+
+- regulatory requirements that may not support multi-tenant virutalization
+- great for licensing
+- puchased on demand for up to 75% off the on-demand price
+
+EC2 Instance Types
+F1 - financial analytics
+I3 - High speed storage
+G3 - Graphics intensive
+H1 - high disk throughput
+T2 - low cost general purpose
+D2 - Dense storage
+R4 - Memory Optimized
+M5 - General purpose
+C5 - Compute
+P3 - graphics or general purpose GPUs
+X1 - Memory optimized
+
+## What is EBS
+
+Allows you to create storage volumes and attach them to EC2 instances. Once attached, you can create a file system on top of these volumes, run a database, or use them in any other way you would use a block device. Placed in an AZ and replicated to protect you from a single point of failure.
+
+EBS Types
+
+- General purpose SSD (GP2)
+
+* general purpose, balances price and performance
+* ratio of 3000 IOPS for extended periods of time
+
+- Provisioned IOPS SSD (IO1)
+
+* Designed for IO intensive apps such as large relational or NoSQL databases
+* Use if you need more than 10,000 IOPS as these can go up to 20,000 IOPS
+
+- Throughput optimised HDD (ST1) - cannot be a boot volume or root device volume
+
+* Big data, data warehouses, log processing
+
+- Cold HDD (SC1)
+
+* cannot be a boot volume
+* for infrequently accessed workloads this is the lowest cost
+
+- Magnetic (standard)
+
+* Legacy, but can still be used. Ideal for infrequent access and this is the lowest overall storage costs. Also is bootable.
+
+Notes:
+If a spot instance is terminated by AWS you will not be charge for a partial hour. However, if you terminate it yourself, you will be charged for the entire hour even if you used it for less.
