--- a/EC2-101.md
+++ b/EC2-101.md
@@ -83,3 +83,9 @@ EBS Types
 
 Notes:
 If a spot instance is terminated by AWS you will not be charge for a partial hour. However, if you terminate it yourself, you will be charged for the entire hour even if you used it for less.
+
+One subnet = one availability zone
+
+Add tags to every instance
+
+Public key is padlock and private key is the key that unlocks it
