--- a/EC2-101.md
+++ b/EC2-101.md
@@ -89,3 +89,24 @@ One subnet = one availability zone
 Add tags to every instance
 
 Public key is padlock and private key is the key that unlocks it
+
+Use Putty to connect to EC2 via SSH. Need to use putty key gen to convert the .pem file to .ppk so that we can load it into putty. 
+
+sudo yum update will grab all the latest updates once connected.
+
+Use nano index.html to open a file editor in the terminal window and the file will be named index.html. This is like using touch except you can write to the file.
+
+With security groups you cannot deny anything it's an allowance list instead
+
+If green ticks are missing just remove and re-add the security groups
+
+Notes for security groups: 
+- All inbound traffic is blocked by default
+- All outbound traffic is allowed
+- Changes to security groups take effect immediately 
+- You can have any number of EC2 instances within a security group
+- Multiple security groups can be attached to EC2 instances
+- Security groups are stateful
+    - If you create an invound rule allowing traffic in, that traffic is automatically allowed back out again.
+- You cannot block specific IP addresses using security groups, instead use network access control lists.
+- You can specify allow rules, but not deny rules
