--- a/EC2-101.md
+++ b/EC2-101.md
@@ -110,3 +110,21 @@ Notes for security groups:
     - If you create an invound rule allowing traffic in, that traffic is automatically allowed back out again.
 - You cannot block specific IP addresses using security groups, instead use network access control lists.
 - You can specify allow rules, but not deny rules
+
+
+### EBS Volumes Lab
+- EBS Volume must be in the same AZ as the EC2 instance
+- Move EBS from one AZ to another, create a snapshot, change region of the snapshot and then create an image from the snapshot. 
+- Snapshots are used for backups and images are used to create new EC2 volumes
+- Volumes exist on EBS (volume is virtual hard disk)
+- Snapshots exist on S3
+- Snapshots are a point in time copy of the volume
+- Snapshots are incremental, only blocks changed since last snapshot are moved to S3. 
+- To create snapshot from root devices, stop instance before taking one even though you can take one during operation
+- You can change EBS volume sizes on the fly, including storage type
+- EBS volume will always be in the same AZ as the EC2 instance
+
+Volumes vs Snapshots - Security 
+- Snapshots of encrypted volumes are encrypted automatically. 
+- Volumes restored from encrypted snapshots are encrypted automatically. 
+- You can share snapshots, but only if they are unencrypted (they can be public or shared with other AWS accounts)
